[package]
name = "wgpp-include"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = "1.0"
naga = { version = "0.13", features = ["validate", "span", "wgsl-in"] }

wgpp = { path = "../wgpp" }
